--- a/src/main/webapp/css/codemirror.css
+++ b/src/main/webapp/css/codemirror.css
@@ -1,4 +1,4 @@
-/* BASICS */
+/* http://codemirror.net/lib/codemirror.css BASICS */
 
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
