--- a/src/main/webapp/css/jquery-ui-redmond.css
+++ b/src/main/webapp/css/jquery-ui-redmond.css
@@ -1,4 +1,4 @@
-/*
+/*http://brat.nlplab.org/css/jquery-theme/jquery-ui-redmond.css
  * jQuery UI CSS Framework 1.8.12
  *
  * Copyright 2011, AUTHORS.txt (http://jqueryui.com/about)
