--- a/src/main/webapp/css/matchesonscrollbar.css
+++ b/src/main/webapp/css/matchesonscrollbar.css
@@ -1,3 +1,4 @@
+/*https://codemirror.net/addon/search/matchesonscrollbar.css*/
 .CodeMirror-search-match {
   background: gold;
   border-top: 1px solid orange;
