--- a/src/main/webapp/css/foldgutter.css
+++ b/src/main/webapp/css/foldgutter.css
@@ -1,3 +1,4 @@
+/*https://codemirror.net/addon/fold/foldgutter.css*/
 .CodeMirror-foldmarker {
   color: blue;
   text-shadow: #b9f 1px 1px 2px, #b9f -1px -1px 2px, #b9f 1px -1px 2px, #b9f -1px 1px 2px;
