--- a/src/main/webapp/css/fullscreen.css
+++ b/src/main/webapp/css/fullscreen.css
@@ -1,3 +1,4 @@
+/*https://codemirror.net/addon/display/fullscreen.css*/
 .CodeMirror-fullscreen {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
