--- a/src/main/webapp/css/neat.css
+++ b/src/main/webapp/css/neat.css
@@ -1,3 +1,4 @@
+/*https://codemirror.net/theme/neat.css*/
 .cm-s-neat span.cm-comment { color: #a86; }
 .cm-s-neat span.cm-keyword { line-height: 1em; font-weight: bold; color: blue; }
 .cm-s-neat span.cm-string { color: #a22; }
