--- a/src/main/webapp/css/style-vis.css
+++ b/src/main/webapp/css/style-vis.css
@@ -1,6 +1,6 @@
 /* -*- Mode: CSS; tab-width: 2; indent-tabs-mode: nil; -*- */
 /* vim:set ft=css ts=2 sw=2 sts=2 autoindent: */
-
+/* http://weaver.nlplab.org/~brat/demo/v1.3/style-vis.css*/
 /* Styling for annotations */
 
 /* alternative font test */
